--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -22,7 +22,7 @@ body {
 }
 .shop {
     width: 750px;
-    margin: 30px auto;
+    margin: auto;
     background: #FFFFFF;
     box-shadow: 5px 5px 5px 5px rgba(0,0,0,0.10);
     border-radius: 6px;
@@ -221,3 +221,97 @@ input:focus {
     top:1px;
 }
 
+.submit_button{
+    box-shadow:inset 0px 9px 17px 6px #29bbff;
+    background:linear-gradient(to bottom, #2dabf9 5%, #0688fa 100%);
+    background-color:#2dabf9;
+    border-radius:9px;
+    border:1px solid #0b0e07;
+    display:inline-block;
+    cursor:pointer;
+    color:#ffffff;
+    font-family:Arial;
+    font-size:15px;
+    display: block;
+    width: 750px;
+    margin:auto;
+    padding:12px 0px;
+    text-decoration:none;
+    text-align:center;
+    text-shadow:0px 0px 34px #263666;
+}
+.submit_button:hover {
+    background:linear-gradient(to bottom, #0688fa 5%, #2dabf9 100%);
+    background-color:#0688fa;
+}
+.submit_button:active {
+    position:relative;
+    top:1px;
+}
+.additional-info
+{
+    text-align:left;
+}
+
+.message{
+    padding:25px;
+    font-size:20px;
+}
+
+.message span{
+    color:red;
+    font-weight:600;
+}
+
+.text_field{
+    padding:25px;
+    padding-top:0;
+}
+
+.text_field textarea{
+    text-align: initial;
+    width: 700px;
+    height:180px;
+    font-size:17px;
+    resize:none;
+}
+
+#submit-info{
+    width:700px;
+    padding:20px;
+    margin-left: 25px;
+    box-shadow:inset 0px 9px 17px 6px #29bbff;
+    background:linear-gradient(to bottom, #2dabf9 5%, #0688fa 100%);
+    background-color:#2dabf9;
+    border-radius:9px;
+    border:1px solid #0b0e07;
+    display:inline-block;
+    cursor:pointer;
+    color:#ffffff;
+    font-family:Arial;
+    font-size:18px;
+    display: block;
+    padding:15px 0px;
+    text-align:center;
+    text-shadow:0px 0px 34px #263666;
+}
+
+#to-main-page-button{
+    width:750px;
+    padding:20px;
+    box-shadow:inset 0px 9px 17px 6px #29bbff;
+    background:linear-gradient(to bottom, #2dabf9 5%, #0688fa 100%);
+    background-color:#2dabf9;
+    border-radius:9px;
+    border:1px solid #0b0e07;
+    display:inline-block;
+    cursor:pointer;
+    color:#ffffff;
+    font-family:Arial;
+    font-size:18px;
+    display: block;
+    padding:15px 0px;
+    text-align:center;
+    text-shadow:0px 0px 34px #263666;
+    margin:auto;
+}
