--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -7,6 +7,7 @@ body {
     width: 100%;
     height: 100%;
     margin: 0;
+    padding-top:10px;
     background-color: #7EC855;
     font-family: 'Roboto', sans-serif;
 }
@@ -45,15 +46,22 @@ body {
     display: flex;
 }
 
-.shop_item {
+.shop_item{
     padding: 10px 30px;
     height: 90px;
     display: flex;
 }
-.item:nth-child(even), .shop_item:nth-child(odd) {
-    border-top:  1px solid #E1E8EE;
+.shop_top {
+    padding: 10px 30px;
+    height: 60px;
+    display: flex;
+}
+.item {
     border-bottom:  1px solid #E1E8EE;
 }
+.shop_item {
+     border-top:  1px solid #E1E8EE;
+ }
 
 .hidden{
     height:0px;
@@ -71,6 +79,13 @@ body {
     width: 16px;
     height: 16px;
     background: url("../img/delete-16.png") no-repeat center;
+}
+.edit-icon {
+    display: inline-block;
+    Cursor: pointer;
+    width: 16px;
+    height: 16px;
+    background: url("../img/edit-icon.png") no-repeat center;
 }
 
 .description {
