--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -96,6 +96,7 @@ body {
 .productName {
     margin-right: 10px;
     width: 180px;
+    overflow:hidden;
 }
 
 .name {
@@ -426,7 +427,7 @@ input:focus {
     color:#ffffff;
     font-family:Arial;
     font-size:16px;
-    padding:6px 20px;
+    padding:6px 5px;
     margin-top:6px;
     text-decoration:none;
     text-shadow:0px 1px 0px #283966;
