i18n new messages. added possibility of creating new drink. languange change on main page added.

--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -499,3 +499,11 @@ input:focus {
     justify-content: center;
 }
 
+#create-new-drink{
+    width:750px;
+}
+
+#locale-change {
+    position: fixed;
+    left: 0; top: 0;
+}
