--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -7,7 +7,7 @@ body {
     width: 100%;
     height: 100%;
     margin: 0;
-    padding-top:10px;
+    padding-top: 10px;
     background-color: #7EC855;
     font-family: 'Roboto', sans-serif;
 }
@@ -16,7 +16,7 @@ body {
     width: 750px;
     margin: 30px auto;
     background: #FFFFFF;
-    box-shadow: 5px 5px 5px 5px rgba(0,0,0,0.10);
+    box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.10);
     border-radius: 6px;
     display: flex;
     flex-direction: column;
@@ -26,7 +26,7 @@ body {
     width: 750px;
     margin: auto;
     background: #FFFFFF;
-    box-shadow: 5px 5px 5px 5px rgba(0,0,0,0.10);
+    box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.10);
     border-radius: 6px;
     display: flex;
     flex-direction: column;
@@ -47,7 +47,7 @@ body {
     display: flex;
 }
 
-.shop_item{
+.shop_item {
     padding: 10px 30px;
     height: 90px;
     display: flex;
@@ -60,15 +60,15 @@ body {
 }
 
 .item {
-    border-bottom:  1px solid #E1E8EE;
+    border-bottom: 1px solid #E1E8EE;
 }
 
 .shop_item {
-     border-top:  1px solid #E1E8EE;
- }
+    border-top: 1px solid #E1E8EE;
+}
 
-.hidden{
-    height:0;
+.hidden {
+    height: 0;
     width: 0;
 }
 
@@ -101,37 +101,37 @@ body {
 .productName {
     margin-right: 10px;
     width: 180px;
-    overflow:hidden;
+    overflow: hidden;
 }
 
 .name {
     margin-right: 10px;
     width: 300px;
-    text-align:left;
-    overflow:hidden;
-    margin-bottom:4px;
+    text-align: left;
+    overflow: hidden;
+    margin-bottom: 4px;
 }
 
-.price, .volume, .left, .count{
+.price, .volume, .left, .count {
     margin-right: 10px;
     width: 85px;
-    text-align:left;
+    text-align: left;
 }
 
-.productPrice{
+.productPrice {
     width: 70px;
-    margin-right:10px;
-    text-align:right;
+    margin-right: 10px;
+    text-align: right;
 }
 
-.priceWithDiscount{
+.priceWithDiscount {
     margin-top: 8px;
     width: 70px;
-    margin-right:10px;
-    text-align:left;
+    margin-right: 10px;
+    text-align: left;
 }
 
-.fullPrice{
+.fullPrice {
     width: 60px;
 }
 
@@ -152,10 +152,10 @@ body {
     color: #9441ef;
 }
 
-.fullPrice{
+.fullPrice {
     margin-top: 18px;
     color: #5e6977;
-    width:100px;
+    width: 100px;
 }
 
 .quantity {
@@ -172,14 +172,14 @@ body {
     font-weight: 300;
 }
 
-tr, td, th{
+tr, td, th {
     border: 0;
-    border-radius:0;
+    border-radius: 0;
 }
 
 button[class*=btn] {
-    margin-top:5px;
-    padding:4px;
+    margin-top: 5px;
+    padding: 4px;
     width: 24px;
     height: 24px;
     background-color: #E1E8EE;
@@ -188,13 +188,13 @@ button[class*=btn] {
     cursor: pointer;
 }
 
-.minus-btn{
-    margin-right:12px;
+.minus-btn {
+    margin-right: 12px;
 }
 
 button:focus,
 input:focus {
-    outline:0;
+    outline: 0;
 }
 
 .total-price {
@@ -206,259 +206,261 @@ input:focus {
     font-weight: 300;
 }
 
-.bottom{
+.bottom {
     display: flex;
     flex-direction: row;
     font-weight: 300;
     font-size: 16px;
     color: #414448;
-    height:50px;
-    margin:20px;
+    height: 50px;
+    margin: 20px;
 }
 
-.bottom div{
-    margin-bottom:15px;
+.bottom div {
+    margin-bottom: 15px;
 }
 
-.bottom_block{
-    width:510px;
-    text-align:right;
-    margin-right:40px
+.bottom_block {
+    width: 510px;
+    text-align: right;
+    margin-right: 40px
 }
 
 .submit {
-    box-shadow:inset 0 0 0 0 #caefab;
-    background:linear-gradient(to bottom, #77d42a 5%, #5cb811 100%);
-    background-color:#77d42a;
-    border-radius:6px;
-    border:1px solid #268a16;
-    display:inline-block;
-    cursor:pointer;
-    color:#5c506d;
-    font-family:Arial;
-    font-size:16px;
-    font-weight:bold;
-    padding:5px 10px;
-    text-decoration:none;
-    text-shadow:0 0 0 #aade7c;
+    box-shadow: inset 0 0 0 0 #caefab;
+    background: linear-gradient(to bottom, #77d42a 5%, #5cb811 100%);
+    background-color: #77d42a;
+    border-radius: 6px;
+    border: 1px solid #268a16;
+    display: inline-block;
+    cursor: pointer;
+    color: #5c506d;
+    font-family: Arial;
+    font-size: 16px;
+    font-weight: bold;
+    padding: 5px 10px;
+    text-decoration: none;
+    text-shadow: 0 0 0 #aade7c;
 }
 
 .submit:hover {
-    background:linear-gradient(to bottom, #5cb811 5%, #77d42a 100%);
-    background-color:#5cb811;
+    background: linear-gradient(to bottom, #5cb811 5%, #77d42a 100%);
+    background-color: #5cb811;
 }
 
 .submit:active {
-    position:relative;
-    top:1px;
+    position: relative;
+    top: 1px;
 }
 
-.submit_button{
-    box-shadow:inset 0 9px 17px 6px #29bbff;
-    background:linear-gradient(to bottom, #2dabf9 5%, #0688fa 100%);
-    background-color:#2dabf9;
-    border-radius:9px;
-    border:1px solid #0b0e07;
-    cursor:pointer;
-    color:#ffffff;
-    font-family:Arial;
-    font-size:15px;
+.submit_button {
+    box-shadow: inset 0 9px 17px 6px #29bbff;
+    background: linear-gradient(to bottom, #2dabf9 5%, #0688fa 100%);
+    background-color: #2dabf9;
+    border-radius: 9px;
+    border: 1px solid #0b0e07;
+    cursor: pointer;
+    color: #ffffff;
+    font-family: Arial;
+    font-size: 15px;
     display: block;
     width: 750px;
-    margin:auto;
-    padding:12px 0;
-    text-decoration:none;
-    text-align:center;
-    text-shadow:0 0 34px #263666;
+    margin: auto;
+    padding: 12px 0;
+    text-decoration: none;
+    text-align: center;
+    text-shadow: 0 0 34px #263666;
 }
 
 .submit_button:hover {
-    background:linear-gradient(to bottom, #0688fa 5%, #2dabf9 100%);
-    background-color:#0688fa;
+    background: linear-gradient(to bottom, #0688fa 5%, #2dabf9 100%);
+    background-color: #0688fa;
 }
 
 .submit_button:active {
-    position:relative;
-    top:1px;
+    position: relative;
+    top: 1px;
 }
 
-.additional-info{
-    text-align:left;
+.additional-info {
+    text-align: left;
 }
 
-.message{
-    padding:25px;
-    font-size:20px;
+.message {
+    padding: 25px;
+    font-size: 20px;
 }
 
-.message span{
-    color:red;
-    font-weight:600;
+.message span {
+    color: red;
+    font-weight: 600;
 }
 
-.text_field{
-    padding:25px;
-    padding-top:0;
+.text_field {
+    padding: 25px;
+    padding-top: 0;
 }
 
-.text_field textarea{
+.text_field textarea {
     text-align: initial;
     width: 700px;
-    height:180px;
-    font-size:17px;
-    resize:none;
+    height: 180px;
+    font-size: 17px;
+    resize: none;
 }
 
-#submit-info{
-    width:700px;
-    padding:20px;
+#submit-info {
+    width: 700px;
+    padding: 20px;
     margin-left: 25px;
-    box-shadow:inset 0px 9px 17px 6px #29bbff;
-    background:linear-gradient(to bottom, #2dabf9 5%, #0688fa 100%);
-    background-color:#2dabf9;
-    border-radius:9px;
-    border:1px solid #0b0e07;
-    cursor:pointer;
-    color:#ffffff;
-    font-family:Arial;
-    font-size:18px;
+    box-shadow: inset 0px 9px 17px 6px #29bbff;
+    background: linear-gradient(to bottom, #2dabf9 5%, #0688fa 100%);
+    background-color: #2dabf9;
+    border-radius: 9px;
+    border: 1px solid #0b0e07;
+    cursor: pointer;
+    color: #ffffff;
+    font-family: Arial;
+    font-size: 18px;
     display: block;
-    padding:15px 0;
-    text-align:center;
-    text-shadow:0 0 34px #263666;
+    padding: 15px 0;
+    text-align: center;
+    text-shadow: 0 0 34px #263666;
 }
 
-#to-main-page-button{
-    width:750px;
-    padding:20px;
-    box-shadow:inset 0 9px 17px 6px #29bbff;
-    background:linear-gradient(to bottom, #2dabf9 5%, #0688fa 100%);
-    background-color:#2dabf9;
-    border-radius:9px;
-    border:1px solid #0b0e07;
-    cursor:pointer;
-    color:#ffffff;
-    font-family:Arial;
-    font-size:18px;
+#to-main-page-button {
+    width: 750px;
+    padding: 20px;
+    box-shadow: inset 0 9px 17px 6px #29bbff;
+    background: linear-gradient(to bottom, #2dabf9 5%, #0688fa 100%);
+    background-color: #2dabf9;
+    border-radius: 9px;
+    border: 1px solid #0b0e07;
+    cursor: pointer;
+    color: #ffffff;
+    font-family: Arial;
+    font-size: 18px;
     display: block;
-    padding:15px 0;
-    text-align:center;
-    text-shadow:0 0 34px #263666;
-    margin:auto;
+    padding: 15px 0;
+    text-align: center;
+    text-shadow: 0 0 34px #263666;
+    margin: auto;
 }
 
-.first{
-    width:100px;
-    padding-left:10px;
+.first {
+    width: 100px;
+    padding-left: 10px;
 }
 
-.second{
-    width:300px;
+.second {
+    width: 300px;
 }
 
 #edit-form {
     width: 400px;
     margin: 30px auto;
     background: #FFFFFF;
-    box-shadow: 5px 5px 5px 5px rgba(0,0,0,0.10);
+    box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.10);
     border-radius: 6px;
     display: flex;
     flex-direction: column;
-    padding:10px;
+    padding: 10px;
 }
 
-.edit-form{
-    width:100%
+.edit-form {
+    width: 100%
 }
 
 #edit-submit {
     box-shadow: 0 0 0 2px #9fb4f2;
-    background:linear-gradient(to bottom, #7892c2 5%, #476e9e 100%);
-    background-color:#7892c2;
-    border-radius:10px;
-    border:1px solid #4e6096;
-    display:inline-block;
-    cursor:pointer;
-    color:#ffffff;
-    font-family:Arial;
-    font-size:16px;
-    padding:6px 20px;
-    margin-top:6px;
-    text-decoration:none;
-    text-shadow:0 1px 0 #283966;
+    background: linear-gradient(to bottom, #7892c2 5%, #476e9e 100%);
+    background-color: #7892c2;
+    border-radius: 10px;
+    border: 1px solid #4e6096;
+    display: inline-block;
+    cursor: pointer;
+    color: #ffffff;
+    font-family: Arial;
+    font-size: 16px;
+    padding: 6px 20px;
+    margin-top: 6px;
+    text-decoration: none;
+    text-shadow: 0 1px 0 #283966;
 }
 
 #edit-submit:hover {
-    background:linear-gradient(to bottom, #476e9e 5%, #7892c2 100%);
-    background-color:#476e9e;
+    background: linear-gradient(to bottom, #476e9e 5%, #7892c2 100%);
+    background-color: #476e9e;
 }
 
 #edit-submit:active {
-    position:relative;
-    top:1px;
+    position: relative;
+    top: 1px;
 }
 
-#edit-button{
+#edit-button {
     text-align: center;
 }
 
-#drink{
-    margin-bottom:0;
+#drink {
+    margin-bottom: 0;
 }
 
-.edit-column{
-    text-align:left;
+.edit-column {
+    text-align: left;
     width: 65px;
-    overflow:hidden;
-    margin-bottom:-2px;
+    overflow: hidden;
+    margin-bottom: -2px;
 }
 
-.small-column{
-    text-align:center;
+.small-column {
+    text-align: center;
     width: 55px;
-    overflow:hidden;
-    margin-bottom:-2px;
+    overflow: hidden;
+    margin-bottom: -2px;
 }
 
-.edit-name{
+.edit-name {
     width: 300px;
-    text-align:left;
-    overflow:hidden;
-    margin-bottom:4px;
+    text-align: left;
+    overflow: hidden;
+    margin-bottom: 4px;
 }
 
-.list{
+.list {
     padding: 10px 30px;
     height: 60px;
     display: flex;
 }
 
-.list-button{
+.list-button {
     box-shadow: 0 0 0 2px #9fb4f2;
-    background:linear-gradient(to bottom, #7892c2 5%, #476e9e 100%);
-    background-color:#7892c2;
-    border-radius:10px;
-    border:1px solid #4e6096;
-    display:inline-block;
-    cursor:pointer;
-    color:#ffffff;
-    font-family:Arial;
-    font-size:16px;
-    padding:6px 5px;
-    margin-top:6px;
-    text-decoration:none;
-    text-shadow:0 1px 0 #283966;
-    width:150px;
+    background: linear-gradient(to bottom, #7892c2 5%, #476e9e 100%);
+    background-color: #7892c2;
+    border-radius: 10px;
+    border: 1px solid #4e6096;
+    display: inline-block;
+    cursor: pointer;
+    color: #ffffff;
+    font-family: Arial;
+    font-size: 16px;
+    padding: 6px 5px;
+    margin-top: 6px;
+    text-decoration: none;
+    text-shadow: 0 1px 0 #283966;
+    width: 150px;
 }
 
-.list-button-block{
+.list-button-block {
     display: inline-block;
 }
 
-.buttons_and_search_area{
-    width:750px;
-    margin:auto;
-    display: flex; justify-content: space-between;
+.buttons_and_search_area {
+    width: 750px;
+    margin: auto;
+    display: flex;
+    align-items:center;
+    justify-content: space-between;
 }
 
 .buttons_and_search_area div:first-child {
@@ -469,11 +471,11 @@ input:focus {
     text-align: right;
 }
 
-#search{
+#search {
     border-radius: 10px;
     border: 1px solid #4e6096;
     box-shadow: 0 0 0 2px #9fb4f2;
-    padding:7px 10px;
+    padding: 7px 10px;
 }
 
 .list-search {
@@ -485,44 +487,91 @@ input:focus {
     box-shadow: 0 0 0 2px #9fb4f2;
     background: url("../img/search-icon-white-32.png") no-repeat, linear-gradient(to bottom, rgb(120, 146, 194) 5%, rgb(71, 110, 158) 100%);
     background-position: 23px;
-    width:82px;
+    width: 82px;
 }
 
 .strange-button {
-    background-color:transparent;
-    display:inline-block;
-    cursor:pointer;
-    color:#333333;
-    font-family:Arial;
-    font-size:18px;
-    font-weight:bold;
-    font-style:italic;
-    padding:6px;
-    text-decoration:none;
-    width:100%;
+    background-color: transparent;
+    display: inline-block;
+    cursor: pointer;
+    color: #333333;
+    font-family: Arial;
+    font-size: 18px;
+    font-weight: bold;
+    font-style: italic;
+    padding: 6px;
+    text-decoration: none;
+    width: 100%;
 }
 
 .strange-button:active {
-    position:relative;
-    top:1px;
+    position: relative;
+    top: 1px;
 }
 
-.half{
-    display:inline-block;
-    width:375px;
+.half {
+    display: inline-block;
+    width: 375px;
 }
 
-.top-block{
-    margin-top:-22px;
+.top-block {
+    margin-top: -22px;
     display: flex;
     justify-content: center;
 }
 
-#create-new-drink{
-    width:750px;
+#create-new-drink {
+    width: 750px;
 }
 
 #locale-change {
     position: fixed;
-    left: 0; top: 0;
+    left: 0;
+    top: 0;
+}
+
+.text-focus-in {
+    position: relative;
+    visibility: hidden;
+    height: 100%;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.text-focus-in span {
+    display: block;
+    text-align: center;
+}
+
+.list-button-block:hover .text-focus-in {
+    visibility: visible;
+    -webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+    animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+
+}
+
+@-webkit-keyframes text-focus-in {
+    0% {
+        -webkit-filter: blur(12px);
+        filter: blur(12px);
+        opacity: 0;
+    }
+    100% {
+        -webkit-filter: blur(0px);
+        filter: blur(0px);
+        opacity: 1;
+    }
+}
+
+@keyframes text-focus-in {
+    0% {
+        -webkit-filter: blur(12px);
+        filter: blur(12px);
+        opacity: 0;
+    }
+    100% {
+        -webkit-filter: blur(0px);
+        filter: blur(0px);
+        opacity: 1;
+    }
 }
